# Course_4

./: .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: API_HH.py  functions.py  user_menu.py  vacancy.py  vacancy_json.py
