[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ivan Anokhin <ivanstalker@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
config = "^0.5.1"
prettytable = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
